# Agent-Karuppu

./: .env  README.md  admin.py  agent.yaml  db.py  models.py  pyproject.toml  task.yaml  user.py
src/instagram_agent/: crew.py  main.py
src/instagram_multi_account_publisher/: crew.py  main.py
src/instagram_multi_account_publisher/config/: agents.yaml  publish_instagram_content.json  tasks.yaml
