[project]
name = "instagram_agent"
version = "0.1.0"
description = "instagram_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[llm,tools]==1.14.0",
    "pyyaml>=6.0"
]

[project.scripts]
instagram_agent = "instagram_agent.main:run"
run_crew = "instagram_agent.main:run"
train = "instagram_agent.main:train"
replay = "instagram_agent.main:replay"
test = "instagram_agent.main:test"
run_with_trigger = "instagram_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
